   get_mirror_data_from_source.
 * merged in package update data from filelist into PACKAGES.TXT format,
   so single lookup returns all packages.
 * added excludes to transaction, now shows packages excluded/held back
 * removed more legacy functions since merging package data and updates...
   the new get_available_and_update_pkgs is now gone.

0.9.5e Oct 10, 2003
 * added a doinst.sh script (generated from the Makefile) to help 
   manage the slapt-getrc.

0.9.5d Oct 09, 2003
 * added initial slack-required for future dependancy support
 * added lilo to example slapt-getrc exclude list
 * improved regex within package.h
 * fixed bug with packages containing more than 4 version parts (dvd+rw-tools)
 * moved regex_t stuff into sg_regex typedef
 * added extra error checking
 * formatting updates
 * actually call regfree() for all regex_t
 * introduced a DO_NOT_UNLINK_BAD_FILES macro within include/main.h
 * changed malloc back to calloc (src/package.c, line 423)
 * initial support for PACKAGE REQUIRED: data in PACKAGES.TXT
   this also means we can support LINUXPACKAGES as MIRROR
 * --no-md5 option to ignore md5 check sum of downloaded packages

0.9.5c Oct 04, 2003
 * removed bad free() in get_installed_pkgs()

0.9.5b Oct 02, 2003
 * yet another improvement to pkg version checking, xspace pointed
   out another example of how pkg versions might slip through cmp routine.

0.9.5 Oct 01, 2003
 * fixed pkg name so that slack-desc shows up... wasn't following
   new package naming convention.  Thanks Luke Yelavich <luke@audioslack.com>
 * bug fix... replaced strcmp with cmp_pkg_versions(char *,char *);
   now greater pkg versions are always correctly returned
   Thanks to xspace <xspace@digitalhigh.de>

0.9.4 Sep 29, 2003
 * downloads CHECKSUMS.md5 from mirror
 * md5 sum's each package after downloading (from CHECKSUMS.md5 data)
   utilizing openssl/evp.h
 * pre-download check... won't download twice if md5sum is good
 * error checking updates