@@ -23,6 +23,8 @@
  * added excludes to transaction, now shows packages excluded/held back
  * removed more legacy functions since merging package data and updates...
    the new get_available_and_update_pkgs is now gone.
+ * pkg_action_install() and pkg_action_remove() now take structure of
+   packages for transaction
 
 0.9.5e Oct 10, 2003
  * added a doinst.sh script (generated from the Makefile) to help 
